add leave pages translation

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -856,6 +856,7 @@
   "boilerplate.components.tables.codes.membershipNo": "رقم عضوية النفابة",
 
   "boilerplate.containers.Payroll.save": "حفظ",
+  "boilerplate.containers.Payroll.close": "إغلاق",
   "boilerplate.containers.Payroll.cancel": "الغاء",
   "boilerplate.containers.Payroll.id": "المسلسل",
   "boilerplate.containers.Payroll.code": "الكود",
@@ -1224,6 +1225,26 @@
   "boilerplate.containers.Payroll.vac.employeeId": "كود الموظف",
   "boilerplate.containers.Payroll.vac.daysCount": "عدد الايام",
   "boilerplate.containers.Payroll.vac.employeeName": "اسم الموظف",
+  "boilerplate.containers.Payroll.vac.department": "الادارة",
+  "boilerplate.containers.Payroll.vac.status": "الحالة",
+  "boilerplate.containers.Payroll.vac.search": "بحث",
+  "boilerplate.containers.Payroll.vac.serial": "مسلسل",
+  "boilerplate.containers.Payroll.vac.employeeCode": "كود الموظف",
+  "boilerplate.containers.Payroll.vac.transactionDate": "تاريخ الادخال",
+  "boilerplate.containers.Payroll.vac.leaveTrxCreateTitle": "إنشاء إجازة",
+  "boilerplate.containers.Payroll.vac.leaveTrxUpdateTitle": "تحديث الإجازة",
+  "boilerplate.containers.Payroll.vac.telNumber": "رقم التليفون",
+  "boilerplate.containers.Payroll.vac.address": "العنوان",
+  "boilerplate.containers.Payroll.vac.leaveReason": "سبب الاجازة",
+  "boilerplate.containers.Payroll.vac.exemptEntryRec": "اعفاء من تسجيل الحضور",
+  "boilerplate.containers.Payroll.vac.exemptLeaveRec": "اعفاء من تسجيل الانصراف",
+  "boilerplate.containers.Payroll.vac.section": "القسم",
+  "boilerplate.containers.Payroll.vac.hiringMonth": "عدد شهور التعيين",
+  "boilerplate.containers.Payroll.vac.insuranceNumber": "الرقم التأميني",
+  "boilerplate.containers.Payroll.vac.medicalNumber": "التأمين الصحي",
+  "boilerplate.containers.Payroll.vac.alternativeEmployee": "الموظف البديل",
+  "boilerplate.containers.Payroll.vac.uploadAttachment": "تحميل المرفق",
+  "boilerplate.containers.Payroll.vac.vacationType": "نوع الإجازة",
 
   "boilerplate.containers.Payroll.vac.code.GovernmentSickLeaveSetting": "اعدادات الاجازة المرضى الحكومى",
   "boilerplate.containers.Payroll.vac.code.VacationType": "نوع الإجازة",
