--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -839,6 +839,7 @@
   "boilerplate.components.tables.codes.transportaion": "Transportaion",
 
   "boilerplate.containers.Payroll.save": "Save",
+  "boilerplate.containers.Payroll.close": "Close",
   "boilerplate.containers.Payroll.cancel": "Cancel",
   "boilerplate.containers.Payroll.id": "Id",
   "boilerplate.containers.Payroll.code": "Code",
@@ -1170,6 +1171,23 @@
   "boilerplate.containers.Payroll.vac.search": "Search",
   "boilerplate.containers.Payroll.vac.fromdate": "From Date",
   "boilerplate.containers.Payroll.vac.todate": "To Date",
+  "boilerplate.containers.Payroll.vac.serial": "Serial",
+  "boilerplate.containers.Payroll.vac.employeeCode": "Employee Code",
+  "boilerplate.containers.Payroll.vac.transactionDate": "Transaction Date",
+  "boilerplate.containers.Payroll.vac.leaveTrxCreateTitle": "Create Leave",
+  "boilerplate.containers.Payroll.vac.leaveTrxUpdateTitle": "Update Leave",
+  "boilerplate.containers.Payroll.vac.telNumber": "Tel Number",
+  "boilerplate.containers.Payroll.vac.address": "Address",
+  "boilerplate.containers.Payroll.vac.status": "Status",
+  "boilerplate.containers.Payroll.vac.leaveReason": "Leave Reason",
+  "boilerplate.containers.Payroll.vac.exemptEntryRec": "Exempt Entry Rec.",
+  "boilerplate.containers.Payroll.vac.exemptLeaveRec": "Exempt Leave Rec.",
+  "boilerplate.containers.Payroll.vac.section": "Section",
+  "boilerplate.containers.Payroll.vac.hiringMonth": "Hiring Month",
+  "boilerplate.containers.Payroll.vac.insuranceNumber": "Insurance Number",
+  "boilerplate.containers.Payroll.vac.medicalNumber": "Medical Number",
+  "boilerplate.containers.Payroll.vac.alternativeEmployee": "Alternative Employee",
+  "boilerplate.containers.Payroll.vac.uploadAttachment": "Upload Attachment",
 
   "boilerplate.containers.Payroll.vac.code.date": "Date",
   "boilerplate.containers.Payroll.vac.code.actions": "Actions",
@@ -1229,7 +1247,6 @@
   "boilerplate.containers.Payroll.vac.code.VacMonthOpenClose_ErrorYearAlreadyOpen": "Year Already Opened",
   "boilerplate.containers.Payroll.vac.code.VacMonthOpenClose_ErrorPreviousyearnotclosed": "Previous year was not closed ...cannot open new year",
   "boilerplate.containers.Payroll.vac.code.TrxSerial": "Trx Serial",
-  "boilerplate.containers.Payroll.vac.code.EmployeeName": "Employee Name",
   "boilerplate.containers.Payroll.vac.code.Template": "Template",
   "boilerplate.containers.Payroll.vac.code.Element": "Element",
   "boilerplate.containers.Payroll.vac.code.year": "Year",
