--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -915,6 +915,10 @@
   "boilerplate.containers.Payroll.approvedEmp": "متخذ القرار",
   "boilerplate.containers.Payroll.edit": "تعديل",
   "boilerplate.containers.Payroll.addNew": "اضافة",
+  "boilerplate.containers.Payroll.vacationBalance": "رصيد الاجازة",
+  "boilerplate.containers.Payroll.noEmployeeIdProvide": "لم يتم توفير كود الموظف",
+  "boilerplate.containers.Payroll.balance": "الرصيد",
+  "boilerplate.containers.Payroll.vacation": "الاجازة",
 
   "boilerplate.containers.Payroll.Setting.parentName": "القائمة الرئيسية",
   "boilerplate.containers.Payroll.Setting.menuName": "اسم القائمة",
