--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1223,6 +1223,9 @@
   "boilerplate.containers.Payroll.vac.medicalNumber": "Medical Number",
   "boilerplate.containers.Payroll.vac.alternativeEmployee": "Alternative Employee",
   "boilerplate.containers.Payroll.vac.uploadAttachment": "Upload Attachment",
+  "boilerplate.containers.Payroll.vac.GovernmentSickLeaveCreateTitle": "Create Government Sick Leave",
+  "boilerplate.containers.Payroll.vac.GovernmentSickLeaveUpdateTitle": "Update Government Sick Leave",
+  "boilerplate.containers.Payroll.vac.reducedFromAnnual": "Reduced From Annual",
 
   "boilerplate.containers.Payroll.vac.code.date": "Date",
   "boilerplate.containers.Payroll.vac.code.actions": "Actions",
