--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -905,7 +905,8 @@
   "boilerplate.containers.Payroll.vacationBalance": "Vacation Balance",
   "boilerplate.containers.Payroll.noEmployeeIdProvide": "No Employee Id Provide",
   "boilerplate.containers.Payroll.balance": "Balance",
-  "boilerplate.containers.Payroll.vacation": "Vacation",
+  "boilerplate.containers.Payroll.vacation": "Vacation",  
+  "boilerplate.containers.Payroll.weekDayName":"Day",
 
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
@@ -1032,9 +1033,7 @@
   "boilerplate.containers.Payroll.Attendance.MissioTrxUpdateTitle": "Update Mission",
   "boilerplate.containers.Payroll.Attendance.missionDestination": "Mission Destination",
   "boilerplate.containers.Payroll.Attendance.transportationExpenses": "Transportation",
-  "boilerplate.containers.Payroll.Attendance.isNotUpdateMission": "Not Update Existing Mission",
-
-  
+  "boilerplate.containers.Payroll.Attendance.isNotUpdateMission": "Not Update Existing Mission",  
   "boilerplate.containers.Payroll.Attendance.hours":"Hours No",
   "boilerplate.containers.Payroll.Attendance.shft2d":"Night Shift",
   "boilerplate.containers.Payroll.Attendance.shft10Hours":"Ten Hours Shift",
@@ -1054,7 +1053,18 @@
   "boilerplate.containers.Payroll.Attendance.shiftId":"Shift Id",
   "boilerplate.containers.Payroll.Attendance.shiftName":"Shift Name",  
   "boilerplate.containers.Payroll.Attendance.EmployeeShiftCreateTitle":"Add Employee Shift",
-  "boilerplate.containers.Payroll.Attendance.EmployeeShiftUpdateTitle":"Update Employee Shift",
+  "boilerplate.containers.Payroll.Attendance.EmployeeShiftUpdateTitle":"Update Employee Shift",  
+  "boilerplate.containers.Payroll.Attendance.timeIn":"TimeIn",
+  "boilerplate.containers.Payroll.Attendance.timeOut":"TimeOut",
+  "boilerplate.containers.Payroll.Attendance.lateMin":"LateMin",
+  "boilerplate.containers.Payroll.Attendance.extraTime":"ExtraTime",
+  "boilerplate.containers.Payroll.Attendance.lessTime":"LessTime",
+  "boilerplate.containers.Payroll.Attendance.breakTime":"BreakTime",
+  "boilerplate.containers.Payroll.Attendance.vac":"Vac",
+  "boilerplate.containers.Payroll.Attendance.per":"Per",
+  "boilerplate.containers.Payroll.Attendance.mission":"Mission",
+  "boilerplate.containers.Payroll.Attendance.shiftVacancy":"ShiftVacancy",
+  "boilerplate.containers.Payroll.Attendance.absence":"Absence",
   
   "boilerplate.containers.Payroll.Workflow.documentName": "Document Name",
   "boilerplate.containers.Payroll.Workflow.step": "Step",
