--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -917,6 +917,9 @@
   "boilerplate.containers.Payroll.addNew": "اضافة",
   "boilerplate.containers.Payroll.vacationBalance": "رصيد الاجازة",
   "boilerplate.containers.Payroll.noEmployeeIdProvide": "لم يتم توفير كود الموظف",
+  "boilerplate.containers.Payroll.noVacationIdProvide": "لم يتم توفير كود الاجازة",
+  "boilerplate.containers.Payroll.somethingWentWrong": "هناك خطأ ما",
+  "boilerplate.containers.Payroll.sickLeave": "أجازة مرضية",
   "boilerplate.containers.Payroll.balance": "الرصيد",
   "boilerplate.containers.Payroll.vacation": "الاجازة",
 
