--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -909,6 +909,11 @@
   "boilerplate.containers.Payroll.somethingWentWrong": "Something Went Wrong",
   "boilerplate.containers.Payroll.balance": "Balance",
   "boilerplate.containers.Payroll.vacation": "Vacation",
+  "boilerplate.containers.Payroll.count_value": "Count / Value",
+  "boilerplate.containers.Payroll.daysCount": "Days Count",
+  "boilerplate.containers.Payroll.day": "Day",
+  "boilerplate.containers.Payroll.value": "Value",
+  "boilerplate.containers.Payroll.employeeDeduced": "Employee Deduced",
 
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
