--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1224,7 +1224,9 @@
   "boilerplate.containers.Payroll.vac.search": "Search",
   "boilerplate.containers.Payroll.vac.fromdate": "From Date",
   "boilerplate.containers.Payroll.vac.todate": "To Date",
+  "boilerplate.containers.Payroll.vac.insuranceDate": "Insurance Date",
   "boilerplate.containers.Payroll.vac.serial": "Serial",
+  "boilerplate.containers.Payroll.vac.consumedLeave": "Consumed Leave",
   "boilerplate.containers.Payroll.vac.modificationReason": "Modification Reason",
   "boilerplate.containers.Payroll.vac.employeeCode": "Employee Code",
   "boilerplate.containers.Payroll.vac.transactionDate": "Transaction Date",
