create `NewEmployeeReport` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1120,6 +1120,16 @@
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "كود الموظف",
   "boilerplate.containers.Payroll.Employee.personal.employeename": "اسم الموظف",
   "boilerplate.containers.Payroll.Employee.personal.status": "الحالة",
+  "boilerplate.containers.Payroll.Employee.personal.insuranceSalary": "راتب التأمين",
+  "boilerplate.containers.Payroll.Employee.personal.basicSalary": "الراتب الاساسي",
+  "boilerplate.containers.Payroll.Employee.personal.qualification": "المؤهلات",
+  "boilerplate.containers.Payroll.Employee.personal.showSalary": "اظهر المرتب",
+  "boilerplate.containers.Payroll.Employee.personal.jopTitle": "اسم الوظيفة",
+  "boilerplate.containers.Payroll.Employee.personal.vacationType": "نوع الاجازة",
+  "boilerplate.containers.Payroll.Employee.personal.toDate": "الي تاريخ",
+  "boilerplate.containers.Payroll.Employee.personal.fromDate": "من تاريح",
+  "boilerplate.containers.Payroll.Employee.personal.department": "القسم",
+  "boilerplate.containers.Payroll.Employee.personal.address": "العنوان",
   "boilerplate.containers.Payroll.Employee.personal.identitynumber": "رقم الهوية",
   "boilerplate.containers.Payroll.Employee.personal.organization": "القسم",
   "boilerplate.containers.Payroll.Employee.personal.reportto": "المدير المباشر",
