--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1082,6 +1082,16 @@
 
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "Employee Code",
   "boilerplate.containers.Payroll.Employee.personal.employeename": "Employee Name",
+  "boilerplate.containers.Payroll.Employee.personal.address": "Address",
+  "boilerplate.containers.Payroll.Employee.personal.department": "Department",
+  "boilerplate.containers.Payroll.Employee.personal.showSalary": "Show Salary",
+  "boilerplate.containers.Payroll.Employee.personal.toDate": "To Date",
+  "boilerplate.containers.Payroll.Employee.personal.fromDate": "From Date",
+  "boilerplate.containers.Payroll.Employee.personal.jopTitle": "Jop Title",
+  "boilerplate.containers.Payroll.Employee.personal.vacationType": "Vacation Type",
+  "boilerplate.containers.Payroll.Employee.personal.qualification": "Qualification",
+  "boilerplate.containers.Payroll.Employee.personal.basicSalary": "Basic Salary",
+  "boilerplate.containers.Payroll.Employee.personal.insuranceSalary": "Insurance Salary",
   "boilerplate.containers.Payroll.Employee.personal.status": "Status",
   "boilerplate.containers.Payroll.Employee.personal.identitynumber": "Identity Number",
   "boilerplate.containers.Payroll.Employee.personal.organization": "Organization",
