add missing `new employee` report columns

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1121,12 +1121,20 @@
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "كود الموظف",
   "boilerplate.containers.Payroll.Employee.personal.employeename": "اسم الموظف",
   "boilerplate.containers.Payroll.Employee.personal.status": "الحالة",
-  "boilerplate.containers.Payroll.Employee.personal.insuranceSalary": "راتب التأمين",
-  "boilerplate.containers.Payroll.Employee.personal.basicSalary": "الراتب الاساسي",
-  "boilerplate.containers.Payroll.Employee.personal.qualification": "المؤهلات",
+  "boilerplate.containers.Payroll.Employee.personal.taxableStuff": "الاشياء الخاضعة للضريبة",
+  "boilerplate.containers.Payroll.Employee.personal.insuranceSalary": "المرتب التاميني",
+  "boilerplate.containers.Payroll.Employee.personal.basicSalary": "المرتب الاساسي",
+  "boilerplate.containers.Payroll.Employee.personal.qualification": "المؤهل",
   "boilerplate.containers.Payroll.Employee.personal.showSalary": "اظهر المرتب",
   "boilerplate.containers.Payroll.Employee.personal.jopTitle": "اسم الوظيفة",
   "boilerplate.containers.Payroll.Employee.personal.vacationType": "نوع الاجازة",
+  "boilerplate.containers.Payroll.Employee.personal.insuranceShare": " التأمين الاجتماعي",
+  "boilerplate.containers.Payroll.Employee.personal.grossSalary": "الراتب الكلى",
+  "boilerplate.containers.Payroll.Employee.personal.netSalary": "الراتب الصافي",
+  "boilerplate.containers.Payroll.Employee.personal.idCardNumber": "رقم بطاقة الهوية",
+  "boilerplate.containers.Payroll.Employee.personal.postOverTime": "احتساب الوقت الاضافى بمقابل نقدي",
+  "boilerplate.containers.Payroll.Employee.personal.insuranceDate": "تاريخ التامين",
+  "boilerplate.containers.Payroll.Employee.personal.qualificationDate": "تاريخ المؤهل ",
   "boilerplate.containers.Payroll.Employee.personal.toDate": "الي تاريخ",
   "boilerplate.containers.Payroll.Employee.personal.fromDate": "من تاريح",
   "boilerplate.containers.Payroll.Employee.personal.department": "القسم",
