--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1083,8 +1083,16 @@
 
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "Employee Code",
   "boilerplate.containers.Payroll.Employee.personal.employeename": "Employee Name",
+  "boilerplate.containers.Payroll.Employee.personal.grossSalary": "Gross Salary",
+  "boilerplate.containers.Payroll.Employee.personal.insuranceShare": "Insurance Share",
+  "boilerplate.containers.Payroll.Employee.personal.qualificationDate": "Qualification Date",
+  "boilerplate.containers.Payroll.Employee.personal.idCardNumber": "Id Card Number",
+  "boilerplate.containers.Payroll.Employee.personal.taxableStuff": "Taxable Stuff",
   "boilerplate.containers.Payroll.Employee.personal.address": "Address",
+  "boilerplate.containers.Payroll.Employee.personal.netSalary": "Net Salary",
   "boilerplate.containers.Payroll.Employee.personal.department": "Department",
+  "boilerplate.containers.Payroll.Employee.personal.postOverTime": "Post Over Time",
+  "boilerplate.containers.Payroll.Employee.personal.insuranceDate": "Insurance Date",
   "boilerplate.containers.Payroll.Employee.personal.showSalary": "Show Salary",
   "boilerplate.containers.Payroll.Employee.personal.toDate": "To Date",
   "boilerplate.containers.Payroll.Employee.personal.fromDate": "From Date",
