finish `Insurance jobs` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -799,6 +799,7 @@
   "boilerplate.components.tables.codes.enname": "الاسم بالانجليزية",
   "boilerplate.components.tables.codes.govname": "المحافطة",
   "boilerplate.components.tables.codes.insuranceOffices": "مكاتب التأمين",
+  "boilerplate.components.tables.codes.jobCode": "كود الوظيفة",
   "boilerplate.components.tables.codes.action": " ",
   "boilerplate.components.tables.codes.address": "العنوان",
   "boilerplate.components.tables.codes.note": "ملاحظات",
