create  `Insurance Calculation Template` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -799,6 +799,11 @@
   "boilerplate.components.tables.codes.enname": "الاسم بالانجليزية",
   "boilerplate.components.tables.codes.govname": "المحافطة",
   "boilerplate.components.tables.codes.insuranceOffices": "مكاتب التأمين",
+  "boilerplate.components.tables.codes.fromAge": "العمر من",
+  "boilerplate.components.tables.codes.toAge": "العمر الي",
+  "boilerplate.components.tables.codes.employeeShare": "حصة الموظف من التأمينات",
+  "boilerplate.components.tables.codes.companyShare": "حصة الشركة من التأمينات",
+  "boilerplate.components.tables.codes.salaryLimit": "حد الراتب",
   "boilerplate.components.tables.codes.jobCode": "كود الوظيفة",
   "boilerplate.components.tables.codes.action": " ",
   "boilerplate.components.tables.codes.address": "العنوان",
