--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -805,6 +805,11 @@
   "boilerplate.components.tables.codes.accno": "Account Number",
   "boilerplate.components.tables.codes.contractperiod": "Contract Period",
   "boilerplate.components.tables.codes.symbol": "Symbol",
+  "boilerplate.components.tables.codes.fromAge": "From Age",
+  "boilerplate.components.tables.codes.toAge": "To Age",
+  "boilerplate.components.tables.codes.companyShare": "Company Share",
+  "boilerplate.components.tables.codes.employeeShare": "Employee Share",
+  "boilerplate.components.tables.codes.salaryLimit": "Salary Limit",
   "boilerplate.components.tables.codes.jobCode": "Jop Code",
   "boilerplate.components.tables.codes.currency": "Currency",
   "boilerplate.components.tables.codes.month": "Month",
