finish EmployeeDataReport page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1213,6 +1213,34 @@
   "boilerplate.containers.Payroll.Employee.doc.uploadFileErrorMes": "الملف كبير للغاية",
   "boilerplate.containers.Payroll.Employee.doc.FilePreview": "معاينة الملف",
 
+  "boilerplate.containers.Payroll.Employee.repo.EmpCode": "كود الموظف",
+  "boilerplate.containers.Payroll.Employee.repo.Staff": "الموظف",
+  "boilerplate.containers.Payroll.Employee.repo.birthDate": "تاريخ الميلاد",
+  "boilerplate.containers.Payroll.Employee.repo.Department": "الادارة",
+  "boilerplate.containers.Payroll.Employee.repo.InsuranceSalary": "المرتب التأميني",
+  "boilerplate.containers.Payroll.Employee.repo.BasicSalary": "المرتب الاساسى",
+  "boilerplate.containers.Payroll.Employee.repo.Job": "الوظيفة",
+  "boilerplate.containers.Payroll.Employee.repo.Gendar": "النوع",
+  "boilerplate.containers.Payroll.Employee.repo.hiringDate": "تاريخ التعيين",
+  "boilerplate.containers.Payroll.Employee.repo.Qualification": "المؤهل",
+  "boilerplate.containers.Payroll.Employee.repo.Address": "العنوان",
+  "boilerplate.containers.Payroll.Employee.repo.BankTransfere": "تحويل للبنك",
+  "boilerplate.containers.Payroll.Employee.repo.Insured": "مؤمن عليه",
+  "boilerplate.containers.Payroll.Employee.repo.TaxableEmployee": "موظف خاضع للضربية على الدخل",
+  "boilerplate.containers.Payroll.Employee.repo.postOverTime": "احتساب الوقت اضافى بمقابل نقدى",
+  "boilerplate.containers.Payroll.Employee.repo.Religion": "الديانة",
+  "boilerplate.containers.Payroll.Employee.repo.Governorate": "المحافظة",
+  "boilerplate.containers.Payroll.Employee.repo.City": "المدينه",
+  "boilerplate.containers.Payroll.Employee.repo.Nationality": "الجنسية",
+  "boilerplate.containers.Payroll.Employee.repo.StopEmployee": "ايقاف التعامل",
+  "boilerplate.containers.Payroll.Employee.repo.BankName": "اسم البنك",
+  "boilerplate.containers.Payroll.Employee.repo.InsuranceJob": "اسم الوظيفة التأمينية",
+  "boilerplate.containers.Payroll.Employee.repo.MedicalInsuranceCategory": "فئة التأمين الصحى",
+  "boilerplate.containers.Payroll.Employee.repo.GraduationDate": "تاريخ صدور المؤهل",
+  "boilerplate.containers.Payroll.Employee.repo.IDCardNumber": "رقم البطاقة الشخصية",
+  "boilerplate.containers.Payroll.Employee.repo.JobType": "نوع الوظيفة",
+  "boilerplate.containers.Payroll.Employee.repo.BookNo": "الرقم الدفترى",
+
   "boilerplate.containers.Payroll.MainData.codes.id": "كود",
   "boilerplate.containers.Payroll.MainData.codes.arName": "الاسم بالعربية",
   "boilerplate.containers.Payroll.MainData.codes.enName": "الاسم بالانجليزية",
