--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1176,6 +1176,34 @@
   "boilerplate.containers.Payroll.Employee.doc.uploadFileErrorMes": "The File Is too Large",
   "boilerplate.containers.Payroll.Employee.doc.FilePreview": "File Preview",
 
+  "boilerplate.containers.Payroll.Employee.repo.EmpCode": "Emp.Code",
+  "boilerplate.containers.Payroll.Employee.repo.Staff": "Staff",
+  "boilerplate.containers.Payroll.Employee.repo.birthDate": "Birth Date",
+  "boilerplate.containers.Payroll.Employee.repo.Department": "Department",
+  "boilerplate.containers.Payroll.Employee.repo.InsuranceSalary": "Insurance Salary",
+  "boilerplate.containers.Payroll.Employee.repo.BasicSalary": "Basic Salary",
+  "boilerplate.containers.Payroll.Employee.repo.Job": "Job",
+  "boilerplate.containers.Payroll.Employee.repo.Gendar": "Gendar",
+  "boilerplate.containers.Payroll.Employee.repo.hiringDate": "Hiring Date",
+  "boilerplate.containers.Payroll.Employee.repo.Qualification": "Qualification",
+  "boilerplate.containers.Payroll.Employee.repo.Address": "Address",
+  "boilerplate.containers.Payroll.Employee.repo.BankTransfere": "BankTransfere",
+  "boilerplate.containers.Payroll.Employee.repo.Insured": "Insured",
+  "boilerplate.containers.Payroll.Employee.repo.TaxableEmployee": "Taxable Employee",
+  "boilerplate.containers.Payroll.Employee.repo.postOverTime": "Post Over Time",
+  "boilerplate.containers.Payroll.Employee.repo.Religion": "Religion",
+  "boilerplate.containers.Payroll.Employee.repo.Governorate": "Governorate",
+  "boilerplate.containers.Payroll.Employee.repo.City": "City",
+  "boilerplate.containers.Payroll.Employee.repo.Nationality": "Nationality",
+  "boilerplate.containers.Payroll.Employee.repo.StopEmployee": "Stop Employee",
+  "boilerplate.containers.Payroll.Employee.repo.BankName": "Bank Name",
+  "boilerplate.containers.Payroll.Employee.repo.InsuranceJob": "Insurance Job",
+  "boilerplate.containers.Payroll.Employee.repo.MedicalInsuranceCategory": "Medical Insurance Category",
+  "boilerplate.containers.Payroll.Employee.repo.GraduationDate": "Graduation Date",
+  "boilerplate.containers.Payroll.Employee.repo.IDCardNumber": "ID Card Number",
+  "boilerplate.containers.Payroll.Employee.repo.JobType": "Job Type",
+  "boilerplate.containers.Payroll.Employee.repo.BookNo": "BookNo.",
+
   "boilerplate.containers.Payroll.MainData.codes.id": "Id",
   "boilerplate.containers.Payroll.MainData.codes.arName": "AR Name",
   "boilerplate.containers.Payroll.MainData.codes.enName": "EN Name",
