--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -932,6 +932,7 @@
   "boilerplate.containers.Payroll.Download":"Download",
   "boilerplate.containers.Payroll.Import":"Import",
   "boilerplate.containers.Payroll.reset":"reset",
+  "boilerplate.containers.Payroll.deleteMessage":"Are You Sure You Want To Delete",
 
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
